Fixed dark mode v1

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,13 +36,13 @@
   }
  
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: 216, 8%, 12%, 1;
     --foreground: 210 40% 98%;
  
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
  
-    --popover: 222.2 84% 4.9%;
+    --popover: 216, 8%, 12%, 1;
     --popover-foreground: 210 40% 98%;
  
     --primary: 210 40% 98%;
